less vaulty, more minecraft respawn message

--- a/src/main/resources/resources/lang/en_US.lang
+++ b/src/main/resources/resources/lang/en_US.lang
@@ -56,7 +56,7 @@ Maybe you need a tank to soak up some aggro.
 Next time, you might wanna spend a healing surge.
 Here—have your hit points back!
 ​You might wanna put more points into vitality.
-I cast my Resurrect Vault Hunter Spell!
+I cast my Resurrect Minecrafter Spell!
 Don't worry—we'll just retcon that.
 Doing good?
 There is no magic like resurrection magic because resurrection magic is -- highly expensive.
@@ -68,7 +68,7 @@ Worry not—Tina is a forgiving goddess.
 You're not dead -- huzzah!
 Arise!
 Just so you know, you're technically undead now.
-When you play the game of Vaults, you win, or you respawn and win a few minutes later.
+When you play the game of Minecraft, you win, or you respawn and win a few minutes later.
 I hope your fantasies involve dying a lot.
 The power of imagination stings like a bitch, huh?
 Thank you for using this personal Necromancy station.
